@@ -28,8 +28,11 @@ sub nth {
 	}
 
 	if ( $nth > 2 and not $config->feedback_done ) {
-		require Padre::Wx::Dialog::WhereFrom;
-		Padre::Wx::Dialog::WhereFrom->new($main);
+		$DB::single = 1;
+		require Padre::Wx::Dialog::WhereFrom2;
+		my $dialog = Padre::Wx::Dialog::WhereFrom2->new($main);
+		$dialog->run;
+		$dialog->Destroy;
 		return 1;
 	}
 
